Finished calc layout. Defined HTML & CSS to give calculator layout. Can now start wiring up the JS.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,30 @@
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="calculator">
+        <div class="display">8</div>
+        <div class="keys">
+          <button class="key-operator">+</button>
+          <button class="key-operator">-</button>
+          <button class="key-operator">×</button>
+          <button class="key-operator">÷</button>
+          <button>7</button>
+          <button>8</button>
+          <button>9</button>
+          <button class="key-equals">=</button>
+          <button>4</button>
+          <button>5</button>
+          <button>6</button>
+          <button>1</button>
+          <button>2</button>
+          <button>3</button>
+          <button class="key-zero">0</button>
+          <button>.</button>
+          <button>C</button>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
