--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
   <body>
     <div class="container">
       <div class="calculator">
-        <div class="display">8</div>
+        <div class="display"></div>
         <div class="keys">
           <button class="key-operator">+</button>
           <button class="key-operator">-</button>
           <button class="key-operator">×</button>
           <button class="key-operator">÷</button>
-          <button>7</button>
-          <button>8</button>
-          <button>9</button>
+          <button onclick="calcInput(7)">7</button>
+          <button onclick="calcInput(8)">8</button>
+          <button onclick="calcInput(9)">9</button>
           <button class="key-equals">=</button>
-          <button>4</button>
-          <button>5</button>
-          <button>6</button>
-          <button>1</button>
-          <button>2</button>
-          <button>3</button>
-          <button class="key-zero">0</button>
+          <button onclick="calcInput(4)">4</button>
+          <button onclick="calcInput(5)">5</button>
+          <button onclick="calcInput(6)">6</button>
+          <button onclick="calcInput(1)">1</button>
+          <button onclick="calcInput(2)">2</button>
+          <button onclick="calcInput(3)">3</button>
+          <button class="key-zero" onclick="calcInput(0)">0</button>
           <button>.</button>
-          <button>C</button>
+          <button onclick="calcInput('clear')">C</button>
         </div>
       </div>
     </div>
