Upate display logic for longer results. Refactored updateDisplay so it uses switch. Updated logic in AddNumberToIDisplay and setCalculationResult to catch overflow errors. Added handleLongResult to accommodate as well. Now need to work on decimal points. Then switch over to more complex operations.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <button onclick="calcInput(3)">3</button>
           <button class="key-zero" onclick="calcInput(0)">0</button>
           <button>.</button>
-          <button onclick="calcInput('clear')">C</button>
+          <button onclick="updateDisplay('clear')">C</button>
         </div>
       </div>
     </div>
