Starting from scratch. Should have done a branch but considering scope and speed thought it better to create a graveyard.js file for reference and start from the beginning with the JS. Going to focus on TDD the first time to keep me on track.

--- a/index.html
+++ b/index.html
@@ -5,33 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calc 2</title>
     <link rel="stylesheet" href="styles.css" />
-    <script src="script.js" defer></script>
+    <script src="calculator.js"></script>
   </head>
   <body>
     <div class="container">
       <div class="calculator">
         <div class="display"></div>
         <div class="keys">
-          <button class="key-operator" onclick="setOperator('add')">+</button>
-          <button class="key-operator" onclick="setOperator('subtract')">
+          <button class="key-operator" onclick="inputOperator('add')">+</button>
+          <button class="key-operator" onclick="inputOperator('subtract')">
             -
           </button>
-          <button class="key-operator" onclick="setOperator('multiply')">
+          <button class="key-operator" onclick="inputOperator('multiply')">
             ×
           </button>
-          <button class="key-operator" onclick="setOperator('divide')">
+          <button class="key-operator" onclick="inputOperator('divide')">
             ÷
           </button>
           <button onclick="calcInput(7)">7</button>
-          <button onclick="calcInput(8)">8</button>
-          <button onclick="calcInput(9)">9</button>
-          <button class="key-equals" onclick="evaluateOp()">=</button>
-          <button onclick="calcInput(4)">4</button>
-          <button onclick="calcInput(5)">5</button>
-          <button onclick="calcInput(6)">6</button>
-          <button onclick="calcInput(1)">1</button>
-          <button onclick="calcInput(2)">2</button>
-          <button onclick="calcInput(3)">3</button>
+          <button onclick="inputNumber(8)">8</button>
+          <button onclick="inputNumber(9)">9</button>
+          <button class="key-equals" onclick="operate()">=</button>
+          <button onclick="inputNumber(4)">4</button>
+          <button onclick="inputNumber(5)">5</button>
+          <button onclick="inputNumber(6)">6</button>
+          <button onclick="inputNumber(1)">1</button>
+          <button onclick="inputNumber(2)">2</button>
+          <button onclick="inputNumber(3)">3</button>
           <button class="key-zero" onclick="calcInput(0)">0</button>
           <button>.</button>
           <button onclick="updateDisplay('clear')">C</button>
