--- a/index.html
+++ b/index.html
@@ -11,29 +11,23 @@
       <div class="calculator">
         <div class="display" id="display"></div>
         <div class="keys">
-          <button class="key-operator" onclick="inputOperator('add')">+</button>
-          <button class="key-operator" onclick="inputOperator('subtract')">
-            -
-          </button>
-          <button class="key-operator" onclick="inputOperator('multiply')">
-            ×
-          </button>
-          <button class="key-operator" onclick="inputOperator('divide')">
-            ÷
-          </button>
-          <button onclick="inInput(7)">7</button>
-          <button onclick="inputNumber(8)">8</button>
-          <button onclick="inputNumber(9)">9</button>
-          <button class="key-equals" onclick="performCalculation()">=</button>
-          <button onclick="inputNumber(4)">4</button>
-          <button onclick="inputNumber(5)">5</button>
-          <button onclick="inputNumber(6)">6</button>
-          <button onclick="inputNumber(1)">1</button>
-          <button onclick="inputNumber(2)">2</button>
-          <button onclick="inputNumber(3)">3</button>
-          <button class="key-zero" onclick="calcInput(0)">0</button>
-          <button>.</button>
-          <button onclick="clearDisplay()">C</button>
+          <button class="key-operator" value="add">+</button>
+          <button class="key-operator" value="subtract">-</button>
+          <button class="key-operator" value="multiply">×</button>
+          <button class="key-operator" value="divide">÷</button>
+          <button class="number" value="7">7</button>
+          <button class="number" value="8">8</button>
+          <button class="number" value="9">9</button>
+          <button class="key-equals" value="=">=</button>
+          <button class="number" value="4">4</button>
+          <button class="number" value="5">5</button>
+          <button class="number" value="6">6</button>
+          <button class="number" value="1">1</button>
+          <button class="number" value="2">2</button>
+          <button class="number" value="3">3</button>
+          <button class="key-zero number" value="0">0</button>
+          <button value=".">.</button>
+          <button value="C">C</button>
         </div>
       </div>
     </div>
